--- a/dbt_snowflake/dbt_project.yml
+++ b/dbt_snowflake/dbt_project.yml
@@ -36,3 +36,9 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+      +enabled: true
+
+    snowflake_sample_data:
+      +materialized: view
+    
+
